welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: value ! is not a member of Int
  while (getY()!=0 && getX()!6){
                            ^